Imporvements to database connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,23 @@
 version: '3'
 services:
+
+# @todo add yarn assets https://nithinbekal.com/posts/yarn-rails/
+
   database:
     container_name: database
     image: postgres:alpine
     volumes:
       - database:/var/lib/postgresql/data
+
   web:
     container_name: web
     build:
       context: .
       dockerfile: ./docker/Dockerfile
     command: sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    environment:
+      DATABASE_URL: postgresql://postgres:@database/rails-girls_development?pool=5
+      RAILS_ENV: development
     volumes:
       - ./src:/data/rails-girls
       - ./src/Gemfile.lock:/data/rails-girls/Gemfile.lock:rw
