--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       dockerfile: ./docker/Dockerfile
     command: sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     environment:
-      DATABASE_URL: postgresql://postgres:@database
+      DATABASE_URL: postgres://postgres:@database/rails-girls_development?pool=5
     volumes:
       - ./src:/data/rails-girls
     ports:
