Fixing a bundler glitch for guest user having no home folder

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,7 +16,7 @@ RUN chmod +x /usr/bin/entrypoint.sh && \
 WORKDIR /data/rails-girls
 USER guest
 
-ENV BUNDLE_USER_HOME /data/rails-girls
+ENV HOME /data/rails-girls
 
 COPY --chown=guest:nogroup src/Gemfile* /data/rails-girls/
 
