--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,12 +11,14 @@ RUN chmod +x /usr/bin/entrypoint.sh && \
 	    postgresql-client \
 	    postgresql-dev \
 	    tzdata && \
-    mkdir -p /data/rails-girls /usr/local/bundle/cache && \
-    chown guest:nogroup /data/rails-girls /usr/local/bundle/cache && \
+    mkdir -p /data/rails-girls /usr/local/bundle && \
+    chown guest:nogroup /data/rails-girls /usr/local/bundle && \
     gem install rails
 
 WORKDIR /data/rails-girls
 USER guest
+
+ENV HOME /data/rails-girls
 
 ENTRYPOINT ["entrypoint.sh"]
 EXPOSE 3000
