--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM ruby:2-alpine
 
+ENV HOME /usr/local/bundle
+
 COPY docker/bin/entrypoint.sh /usr/bin/
 
 RUN chmod +x /usr/bin/entrypoint.sh && \
@@ -12,16 +14,13 @@ RUN chmod +x /usr/bin/entrypoint.sh && \
       postgresql-dev \
       tzdata && \
     mkdir -p /data/rails-girls && \
-    chown guest:nogroup /data/rails-girls	    
+    chown -R guest:nogroup /data/rails-girls /usr/local/bundle && \
+    bundle config --local disable_platform_warnings true && \
+    gem install rails
 
 USER guest
 
-ENV HOME /usr/local/bundle 
-
-RUN bundle config --local disable_platform_warnings true && \
-    gem install rails
-    
-WORKDIR /data/rails-girls    
+WORKDIR /data/rails-girls
 
 ENTRYPOINT ["entrypoint.sh"]
 EXPOSE 3000
