--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
+    command: sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"  
     environment:
       DATABASE_URL: postgres://postgres:@database/rails-girls_development?pool=5
     volumes:
