--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   database:
     container_name: database
     image: postgres:alpine
+    environment:
+      POSTGRES_USER: railsGirls
+      POSTGRES_PASSWORD: ThisIsANotSoSecretPassword
     volumes:
       - database:/var/lib/postgresql/data
 
@@ -13,7 +16,7 @@ services:
       context: .
       dockerfile: ./docker/Dockerfile
     environment:
-      DATABASE_URL: postgres://postgres:@database/rails-girls_development?pool=5
+      DATABASE_URL: postgres://railsGirls:ThisIsANotSoSecretPassword@database/rails_girls_development?pool=5
     volumes:
       - ./src:/data/rails-girls
     ports:
